--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="info">
                     <input id="sold" type="number" name="sold" placeholder="Số vé bán ra">
                     <input id="money" type="number" name="money" placeholder="Số tiền trong tay">
-                    <input id="changes" type="number" name="changes" placeholder="Số tiền đổi">
+                    <input id="changes" type="number" name="changes" placeholder="Số tiền thối">
                 </div>
                 <button type="submit" onclick="calculation()">Submit</button>
                 <div>
