--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
                 <img src="FlyerHCHT18.png" height="500px">
             </div>
             <section class="form-ticket">
+                <h1>Info bán vé:</h1>
+                <div class="place">
+                    <input type="text" placeholder="Họ Tên">
+                    <input type="text" placeholder="Tên Nhà Thờ">
+                    <input type="text" placeholder="Ngày/Giờ">
+                </div>
                 <h1>Tính tiền sau khi mua vé:</h1>
                 <div class="info">
                     <input id="sold" type="number" name="sold" placeholder="Số vé bán ra">
