--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input id="money" type="number" name="money" placeholder="Số tiền trong tay">
                     <input id="changes" type="number" name="changes" placeholder="Số tiền thối">
                 </div>
-                <button type="submit" onclick="calculation()">Submit</button>
+                <button type="Tính Tiền" onclick="calculation()">Submit</button>
                 <div>
                     <h2>Tiền profit: <strong id="profit">0</strong></h2>
                     <h2>Tiền cho bán vé: <strong id="tickets">0</strong></h2>
