--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <section class="form-ticket">
             <h1>Info bán vé:</h1>
             <div class="place">
-                <input type="text" placeholder="Họ Tên">
-                <input type="text" placeholder="Tên Nhà Thờ">
-                <input type="text" placeholder="Ngày/Giờ">
+                <input type="text" placeholder="Họ Tên" size="50">
+                <input type="text" placeholder="Tên Nhà Thờ" size="50">
+                <input type="text" placeholder="Ngày/Giờ" size="50">
             </div>
             <h1>Tính tiền sau khi mua vé:</h1>
             <div class="info">
-                <input id="sold" type="number" name="sold" placeholder="Số vé bán ra">
-                <input id="money" type="number" name="money" placeholder="Số tiền trong tay">
-                <input id="changes" type="number" name="changes" placeholder="Số tiền thối">
+                <input id="sold" type="number" name="sold" placeholder="Số vé bán ra" size="50">
+                <input id="money" type="number" name="money" placeholder="Số tiền trong tay" size="50">
+                <input id="changes" type="number" name="changes" placeholder="Số tiền thối" size="50">
             </div>
             <button type="Tính Tiền" onclick="calculation()">Submit</button>
             <div>
