--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="text" placeholder="Ngày/Giờ" size="50">
             </div>
             <div class="info">
-                <h1>Tính tiền sau khi mua vé:</h1>
+                <h1>Sau khi mua vé:</h1>
                 <input id="sold" type="number" name="sold" placeholder="Số vé bán ra" size="50">
                 <input id="money" type="number" name="money" placeholder="Số tiền trong tay" size="50">
                 <input id="changes" type="number" name="changes" placeholder="Số tiền thối" size="50">
