Chỉnh sửa thiết kế

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                 <input id="changes" type="number" name="changes">
             </div>
             <button type="Tính Tiền" onclick="calculation()">Submit</button>
+            <div class="icon">
+                <img src="FlyerHCHT18.png" height="145">
+            </div>
             <div class="result">
                 <p>Số vé bán được: <strong id="sold">0</strong></p>
-                <p>Tiền profit: <strong id="profit">0</strong></p>
+                <p>Thành tiền: <strong id="profit">0</strong></p>
                 <p>Tiền cho bán vé: <strong id="tickets">0</strong></p>
                 <p>Tiền donation: <strong id="donation">0</strong></p>
             </div>
