Thêm option cho tên nhà thờ

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 <label for="ten">Tên:</label>
                 <input type="text" id="ten">
                 <label for="nhatho">Nhà Thờ:</label>
-                <input type="text" id="nhatho">
+                <input type="text" id="nhatho" list="churches">
+                <datalist id="churches"></datalist>
                 <label for="ngay">Ngày:</label>
                 <input type="date" id="ngay">
                 <label for="gio">Giờ:</label>
