Đổi nhà thờ thành select
Đổi nhà thờ thành select

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
                 <label for="ten">Tên:</label>
                 <input type="text" id="ten">
                 <label for="nhatho">Nhà Thờ:</label>
-                <input type="text" id="nhatho" list="churches">
+                <!-- <input type="#"> -->
+                    <select name="" id="">
+                        <option value="">Trung Tâm Công Giáo</option>
+                        <option value="">Thánh Linh</option>
+                        <option value="">La Vang</option>
+                        <option value="">Westminster</option>
+                        <option value="">St. Cecilia</option>
+                        <option value="">Columban</option>
+
+                    </select>
+                <br>
                 <datalist id="churches"></datalist>
                 <label for="ngay">Ngày:</label>
                 <input type="date" id="ngay">
