--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
                 <input type="text" id="ten">
                 <label for="churches">Nhà Thờ:</label>
                 <!-- <input type="#"> -->
-                <select name="" id="churches"></select>
+                <select name="" id="churches">
+                    <option value="ttcg">Trung Tâm Công Giáo</option>
+                    <option value="thanhlinh">Thánh Linh</option>
+                    <option value="lavang">La Vang</option>
+                    <option value="westminster">Westminster</option>
+                    <option value="cecilia">St. Cecilia</option>
+                    <option value="columban">Columban</option>
+                </select>
                 <br>
                 <label for="ngay">Ngày:</label>
                 <input type="date" id="ngay">
