--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                     <option value="westminster">Westminster</option>
                     <option value="cecilia">St. Cecilia</option>
                     <option value="columban">Columban</option>
-                </select>
+                    <option value="barbara">St Barbara</option>
+
+                </selects>
                 <br>
                 <label for="ngay">Ngày:</label>
                 <input type="date" id="ngay">
