--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
                 </selects>
                 <br>
-                <label for="ngay">Ngày:</label>
+                <label for="ngay">Ngày:</label><br>
                 <input type="date" id="ngay">
                 <br>
-                <label for="gio">Giờ:</label>
+                <label for="gio">Giờ:</label><br>
                 <input type="time" id="gio">
             </div>
             <div class="info">
