--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <option value="columban">Columban</option>
                     <option value="barbara">St Barbara</option>
 
-                </selects>
+                </select>
                 <br>
                 <label for="ngay">Ngày:</label><br>
                 <input type="date" id="ngay">
