--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
                 <label for="churches">Nhà Thờ:</label>
                 <!-- <input type="#"> -->
                 <select name="" id="churches">
-                    <option value="ttcg">Trung Tâm Công Giáo</option>
-                    <option value="thanhlinh">Thánh Linh</option>
-                    <option value="lavang">La Vang</option>
-                    <option value="westminster">Westminster</option>
-                    <option value="cecilia">St. Cecilia</option>
-                    <option value="columban">Columban</option>
-                    <option value="barbara">St Barbara</option>
-
+                    <option v-for="church in churches">{{ church }}</option>
                 </select>
                 <br>
                 <label for="ngay">Ngày:</label><br>
@@ -33,25 +26,26 @@
             <div class="info">
                 <h1>Sau khi mua vé:</h1>
                 <label for="total">Tổng số vé:</label>
-                <input id="total" type="number" name="total">
+                <input id="total" type="number" name="total" onchange="calculation()">
                 <label for="rest">Số vé còn lại:</label>
-                <input id="rest" type="number" name="rest">
+                <input id="rest" type="number" name="rest" onchange="calculation()">
                 <label for="money">Số tiền tổng cộng:</label>
-                <input id="money" type="number" name="money">
+                <input id="money" type="number" name="money" onchange="calculation()">
                 <label for="changes">Tiền thối:</label>
-                <input id="changes" type="number" name="changes">
+                <input id="changes" type="number" name="changes" onchange="calculation()">
             </div>
             <button type="Tính Tiền" onclick="calculation()">Submit</button>
             <div class="icon">
                 <img src="FlyerHCHT18.png" height="145">
             </div>
             <div class="result">
-                <p>Số vé bán được: <strong id="sold">0</strong></p>
-                <p>Thành tiền: <strong id="profit">0</strong></p>
-                <p>Tiền cho bán vé: <strong id="tickets">0</strong></p>
-                <p>Tiền donation: <strong id="donation">0</strong></p>
+                <p>Số vé bán được: <strong id="sold">{{sold}}</strong></p>
+                <p>Thành tiền: <strong id="profit">{{profit}}</strong></p>
+                <p>Tiền cho bán vé: <strong id="tickets">{{tickets}}</strong></p>
+                <p>Tiền donation: <strong id="donation">{{donation}}</strong></p>
             </div>
         </section>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
         <script src="javascript.js"></script>
     </body>
 </html>
