--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <label for="changes">Tiền thối:</label>
                 <input id="changes" type="number" name="changes" onchange="calculation()">
             </div>
-            <button type="Tính Tiền" onclick="calculation()">Submit</button>
+            <button type="submit" onclick="calculation()">Tính Tiền</button>
             <div class="icon">
-                <img src="FlyerHCHT18.png" height="145">
+                <img src="FlyerHCHT18.png" height="145" alt="HCHT18">
             </div>
             <div class="result">
                 <p>Số vé bán được: <strong id="sold">{{sold}}</strong></p>
