--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <div class="icon">
                 <img src="FlyerHCHT18.png" height="145" alt="HCHT18">
             </div>
-            <div class="result">
-                <p>Số vé bán được: <strong id="sold">{{sold}}</strong></p>
-                <p>Thành tiền: <strong id="profit">{{profit}}</strong></p>
-                <p>Tiền cho bán vé: <strong id="tickets">{{tickets}}</strong></p>
-                <p>Tiền donation: <strong id="donation">{{donation}}</strong></p>
+            <div id="result">
+                <p>Số vé bán được: <strong>{{ sold }}</strong></p>
+                <p>Thành tiền: <strong>{{ profit }}</strong></p>
+                <p>Tiền cho bán vé: <strong>{{ tickets }}</strong></p>
+                <p>Tiền donation: <strong>{{ donation }}</strong></p>
             </div>
         </section>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
         <script src="javascript.js"></script>
     </body>
 </html>
